--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -207,7 +207,7 @@
                     </fieldset>
 
                     <fieldset class="training__select">
-                        <select class="col-12 training__select_style" name="">
+                        <select class="col-12 training__select_style" name="time">
                             <option value="time" disabled>Время тренировки</option>
                             <option value="9">9:00</option>
                             <option value="14">14:00</option>
